--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-   "name": "remix-cf-hono",
-   "private": true,
-   "sideEffects": false,
-   "type": "module",
-   "scripts": {
-      "build": "remix vite:build",
-      "deploy": "wrangler deploy",
-      "dev": "remix vite:dev",
-      "start": "wrangler dev",
-      "typecheck": "tsc",
-      "typegen": "wrangler types"
-   },
-   "dependencies": {
-      "@remix-run/cloudflare": "^2.15.3",
-      "@remix-run/react": "^2.15.3",
-      "@remix-run/server-runtime": "^2.15.3",
-      "@tailwindcss/vite": "^4.0.6",
-      "hono": "^4.7.1",
-      "isbot": "^4.1.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
-   },
-   "devDependencies": {
-      "@cloudflare/workers-types": "^4.20250214.0",
-      "@hono/vite-dev-server": "^0.18.1",
-      "@remix-run/dev": "^2.15.3",
-      "@types/react": "^18.2.20",
-      "@types/react-dom": "^18.2.7",
-      "tailwindcss": "^4.0.6",
-      "typescript": "^5.1.6",
-      "vite": "^5.1.0",
-      "vite-tsconfig-paths": "^4.2.1",
-      "wrangler": "^3.109.1"
-   },
-   "engines": {
-      "node": ">=20.0.0"
-   }
+  "name": "remix-cf-hono",
+  "private": true,
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "build": "react-router build",
+    "deploy": "wrangler deploy",
+    "dev": "react-router dev",
+    "start": "wrangler dev",
+    "typecheck": "react-router typegen && tsc",
+    "typegen": "wrangler types"
+  },
+  "dependencies": {
+    "@react-router/cloudflare": "^7.0.0",
+    "@tailwindcss/vite": "^4.0.6",
+    "hono": "^4.7.1",
+    "isbot": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^7.0.0"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "@hono/vite-dev-server": "^0.18.1",
+    "@react-router/dev": "^7.0.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "tailwindcss": "^4.0.6",
+    "typescript": "^5.1.6",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.109.1"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
